--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,4 +21,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+//    implementation 'com.cc.core:core:1.0.0'
 }
